# radiotrope

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES
.github/workflows/: ci.yml
crates/radiotrope/: Cargo.toml
crates/radiotrope-app/: Cargo.toml  build.rs
crates/radiotrope-app/src/: config.rs  error.rs  lib.rs  main.rs
crates/radiotrope-app/src/app/: controller.rs  mod.rs  state.rs
crates/radiotrope-app/src/data/: cache.rs  favorites.rs  mod.rs  settings.rs  storage.rs  types.rs
crates/radiotrope-app/src/mcp/: mod.rs  server.rs  tools.rs  types.rs
crates/radiotrope-app/src/network/: client.rs  logo.rs  mod.rs
crates/radiotrope-app/src/providers/: mod.rs  radio_browser.rs  traits.rs  types.rs
crates/radiotrope-app/ui/: app.slint  controls.slint  favorites.slint  menu-bar.slint  playback.slint  theme.slint  visualization.slint
crates/radiotrope-app/ui/dialogs/: country-picker.slint  network-stream.slint  station-browser.slint  statistics.slint
crates/radiotrope-cli/: Cargo.toml
crates/radiotrope-cli/src/: main.rs
crates/radiotrope/src/: config.rs  error.rs  lib.rs
crates/radiotrope/src/audio/: analyzer.rs  decoder.rs  engine.rs  health.rs  mod.rs  stats.rs  types.rs
crates/radiotrope/src/stream/: buffer.rs  hls.rs  icy.rs  metadata.rs  mod.rs  playlist.rs  resolver.rs  types.rs
