[workspace]
resolver = "2"
members = [
    "crates/radiotrope",
    "crates/radiotrope-cli",
]

[workspace.dependencies]
# Audio
rodio = { version = "0.21", default-features = false, features = ["playback"] }
symphonia = { version = "0.5", default-features = false, features = [
    "ogg", "pcm", "mp3", "aac", "isomp4", "flac", "vorbis", "wav"
] }
symphonia-adapter-libopus = { version = "0.2.5", features = ["bundled"] }
symphonia-adapter-fdk-aac = "0.1.3"
rustfft = "6.4"

# Streaming
m3u8-rs = "6"
mpeg2ts = "0.6"
crossbeam-channel = "0.5"

# Network
reqwest = { version = "0.13", default-features = false, features = [
    "blocking", "native-tls", "http2"
] }

# Utilities
thiserror = "2"

[profile.release]
strip = true
