[package]
name = "radiotrope-app"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.80"
description = "Desktop internet radio player with Slint UI"
license = "MIT"
authors = ["George Alexiou <goten002@gmail.com>"]
repository = "https://github.com/goten002/radiotrope"
readme = "../../README.md"
keywords = ["radio", "gui", "slint", "internet-radio", "streaming"]
categories = ["gui", "multimedia::audio"]

[[bin]]
name = "radiotrope"
path = "src/main.rs"

[dependencies]
radiotrope = { path = "../radiotrope" }
slint = { workspace = true }
crossbeam-channel = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "ico"] }

[build-dependencies]
slint-build = "1.15"
